# GenTorrent

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  questions.txt  test.py
prototype/: broadcaster.py
prototype/Overlay Forwarding/: client.py  local_hrt_vllm.py  local_hrt_vllm_wo_lb.py  start_server.sh  vanilla_vllm_v0.py
prototype/Overlay Forwarding/HashRadixTree/: HashRadixTree.py  ModelNode.py  test_case.py
small_prototype/Overlay Forwarding/: end_servers.sh  local_hrt_vllm.py  start_server.sh
small_prototype/Overlay Forwarding/HashRadixTree/: HashRadixTree.py  ModelNode.py  test_case.py
src/encrypt_p2p/: crypto_utils.hpp  ida.hpp  key_generation.hpp  network_handler.hpp  s_ida.hpp
src/llm/: llama_wrapper.cpp  llama_wrapper.hpp
src/node/: main_verification_node.cpp  model_node.cpp  model_node.hpp  user_node.cpp  user_node.hpp  verification_node.cpp  verification_node.hpp
verification_tendermint/: .gitignore  README.md  build.gradle  config.properties  settings.gradle
verification_tendermint/src/main/java/io/planetllm/: App.java  CredibilityApp.java  GrpcServer.java  TestClient.java  VerificationNodeWrapper.java
